--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,18 +21,13 @@ jobs:
       run: bin/rake lint:deps
     - name: Check Yard syntax with `yard-junk`
       run: bin/rake lint:docs
-    - name: Analyze the licences with `fossa`
-      uses: fossa-contrib/fossa-action@v1
-      with:
-        fossa-api-key: a412c0a6d01bf4706220887cd095f79d
-        github-token: ${{ github.token }}
 
   build:
     needs: [linting]
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        ruby: [2.7, 2.6, 2.5, jruby, truffleruby]
+        ruby: [3.0, 2.7, 2.6, 2.5, jruby, truffleruby]
     steps:
     - uses: actions/checkout@v2
       with:
